--- a/docs/A WebSSO Implementation/030 Name Identifiers.adoc
+++ b/docs/A WebSSO Implementation/030 Name Identifiers.adoc
@@ -1,6 +1,10 @@
+== Name Identifier Formats
 In conjunction with their support of the SAML V2.0 profiles referenced by subsequent sections, Identity Provider and Service Provider implementations MUST support the following SAML V2.0 name identifier formats, in accordance with the normative obligations associated with them by [SAML2Core]:
 
-| RequID  | Format Identifier                                     | SAML specification      | IDP  | SP   | eGov IOP 2.0  |
-|---------|-------------------------------------------------------|-------------------------|------|------|---------------|
-| NIF-001 | urn:oasis:names:tc:SAML:2.0:nameid-format:persistent  | [SAML2Core] sect. 8.3   | MUST | MUST | 223           |
-| NIF-002 | urn:oasis:names:tc:SAML:2.0:nameid-format:transient   | [SAML2Core] sect. 8.3   | MUST | MUST | 224           |
+.Supported SAML Name Identifier formats
+[width="100%", cols="4,2,2,3,27", options="header"]
+|====================
+| RequID  | IDP  | SP   | Source| Format Identifier                                                                  
+| NID-001 | MUST | MUST | eGov/223| urn:oasis:names:tc:SAML:2.0:nameid-format:persistent (see [SAML2Core] sect. 8.3)   
+| NID-002 | MUST | MUST | eGov/224| urn:oasis:names:tc:SAML:2.0:nameid-format:transient (see [SAML2Core] sect. 8.3)    
+|====================
