--- a/docs/A WebSSO Implementation/010_Message_Flows_eGov.adoc
+++ b/docs/A WebSSO Implementation/010_Message_Flows_eGov.adoc
@@ -1,7 +1,8 @@
-== Message Flows and Bindings
+=== Message Flows and Bindings
+==== Message Authentication
 
 
-.Support for the combination of message flows, bindings and message authentication
+.Support for the combination of message flows, bindings with respect to message authentication
 [width="100%", cols="7,2,2,3,25,7,10", options="header"]
 
 |====================
@@ -12,7 +13,7 @@
 | IMFB-004 | MUST | MUST | eGov/274, 290      | Web SSO Response (see [SAML2Prof] sect. 4.1) | HTTP artifact | Signature          
 | IMFB-005 | MUST | MUST | eGov/274, 290      | Web SSO unsolicited Response (see [SAML2Prof] sect. 4.1.5) | n/a           | n/a  
 | IMFB-006 | MUST | MUST | eGov/323,330,333   | Artifact Resolution Request and Response (see [SAML2Prof] sect. 5) | SOAP          | Message signature  
-| IMFB-007 | MUST | MUST | eGov/323,330,333   | Artifact Resolution Request and Response (see [SAML2Prof] sect. 5) | SOAP          | TLS                
+| IMFB-007 | MAY  | MAY  | eGov/323,330,333   | Artifact Resolution Request and Response (see [SAML2Prof] sect. 5) | SOAP          | TLS                
 | IMFB-008 | MUST | MAY  | eGov/377, 384      | SLO SP-initiated LogoutRequest (see [SAML2Prof] sect. 4.4) | HTTP redirect | Message signature  
 | IMFB-009 | MUST | MUST | eGov/377, 384      | SLO SP-initiated LogoutRequest (see [SAML2Prof] sect. 4.4) | SOAP          | Message signature  
 | IMFB-010 | MUST | MUST | eGov/375, 384      | SLO IdP-initiated LogoutRequest (see [SAML2Prof] sect. 4.4) | SOAP          | Message signature  
@@ -25,13 +26,4 @@
 | IMFB-017 | MUST | MAY  | eGov/405, 410, 414 | SLO IDP-initiated LogoutResponse (see [SAML2Prof] sect. 4.4) | HTTP redirect | TLS                
 | IMFB-018 | MUST | MUST | eGov/405, 410, 414 | SLO IDP-initiated LogoutResponse (see [SAML2Prof] sect. 4.4) | SOAP          | TLS                
 | IMFB-019 | MUST | MUST | eGov/405, 410, 414 | SLO SP-initiated LogoutResponse (see [SAML2Prof] sect. 4.4) | SOAP          | TLS                
-| IMFB-020 |      |      |                    | IDP Discovery (see [IdPDisco]  sect. 2.4.1) | (cookie)      | Message signature  
-| IMFB-021 |      |      |                    | Request Initiation Protocol (see [SAML-ReqInit])          | HTTP GET      |                    
-| IMFB-022 |      |      |                    | Assertion Query AttributeQuery (see [SAML2Prof] sect. 6) | SOAP          |                    
-| IMFB-023 |      |      |                    | Enhanced Client/Proxy SSO (see [SAML2Prof] sect. 4.2) | PAOS          |                    
-| IMFB-024 |      |      |                    | Name Identifier Management (IdP-initiated) (see [SAML2Prof] sect. 4.5) | HTTP redirect |                    
-| IMFB-025 |      |      |                    | Name Identifier Management (IdP-initiated) (see [SAML2Prof] sect. 4.5) | SOAP          |                    
-| IMFB-026 |      |      |                    | Name Identifier Management (SP-initiated) (see [SAML2Prof] sect. 4.5) | HTTP redirect |                    
-| IMFB-027 |      |      |                    | Name Identifier Management (SP-initiated) (see [SAML2Prof] sect. 4.5) | SOAP          |                    
-| IMFB-028 |      |      |                    | Holder-of-Key WebSSO (see [SAML2HoK])              |               |                    
 |====================
