--- a/docs/A WebSSO Implementation/020_Attribute_Name_Formats.adoc
+++ b/docs/A WebSSO Implementation/020_Attribute_Name_Formats.adoc
@@ -1,4 +1,4 @@
-== Attribute Name Formats
+=== Attribute Name Formats
 
 In conjunction with their support of the SAML V2.0 profiles referenced by subsequent sections, Identity Provider and Service Provider implementations MUST support the generation and consumption of <saml2:Attribute> elements that conform to the SAML V2.0 X.500/LDAP Attribute Profile [SAML-X500].
 The ability to support <saml2:AttributeValue> elements whose values are not simple strings (e.g., <saml2:NameID>, or other XML values) is OPTIONAL. Such content could be base64-encoded as an alternative.
@@ -7,7 +7,8 @@ The ability to support <saml2:AttributeValue> elements whose values are not simp
 [width="100%", cols="3,2,2,3,20", options="header"]
 |====================
 | RequID  | IDP  | SP   | Source | Requirement           
-| ATR-001 | MUST | MUST | eGov/227          | Support attribute name format urn:oasis:names:tc:SAML:2.0:attrname-format:uri (see [SAML-X500] sect. 2.3)
-| ATR-002 | MUST | MUST | eGov/231          | Support xs:string as attribute values; other types are optional (see [SAML2Core] sect. 2.7.3.1.1)
-| ATR-003 | new? | new? | -            | Supply/consume explicit xs:type for <AttributeValue> (see [SAML2Core] sect. 2.7.3.1.1)
+| IATR-001 | MUST | MUST | eGov/227          | Support attribute name format urn:oasis:names:tc:SAML:2.0:attrname-format:uri (see [SAML-X500] sect. 2.3)
+| IATR-002 | MUST | MUST | eGov/231          | Support xs:string as attribute values; other types are optional (see [SAML2Core] sect. 2.7.3.1.1)
+| IATR-003 | ? | ? | implied?            | Supply/consume explicit xs:type for <AttributeValue> (see [SAML2Core] sect. 2.7.3.1.1)
 |====================
+
