--- a/docs/A WebSSO Implementation/015_Message_Encryption_eGov.adoc
+++ b/docs/A WebSSO Implementation/015_Message_Encryption_eGov.adoc
@@ -5,8 +5,8 @@
 
 |====================
 | RequID   | IDP  | SP   | Source             | Message Flow                   | Binding       | Message Encryption Element    
-| IMFB-101 | MUST | MUST | eGov/295           | Web SSO Response (see [SAML2Prof] sect. 4.1) | HTTP POST | `<saml2:EncryptedAssertion>` 
-| IMFB-102 | MAY  | MAY  | eGov/295           | Web SSO Response (see [SAML2Prof] sect. 4.1) | HTTP POST | `<saml2:EncryptedID>` or `<saml2:EncryptedAttribute>`
-| IMFB-103 | MUST | MUST | eGov/390           | SLO LogoutRequest (see [SAML2Prof] sect. 4.4) | HTTP redirect | `<saml2:EncryptedID>`
+| IMFB-101 | MUST | MUST | eGov/295           | Web SSO Response (see <<SAML2Prof>> sect. 4.1) | HTTP POST | `<saml2:EncryptedAssertion>` 
+| IMFB-102 | MAY  | MAY  | eGov/295           | Web SSO Response (see <<SAML2Prof>> sect. 4.1) | HTTP POST | `<saml2:EncryptedID>` or `<saml2:EncryptedAttribute>`
+| IMFB-103 | MUST | MUST | eGov/390           | SLO LogoutRequest (see <<SAML2Prof>> sect. 4.4) | HTTP redirect | `<saml2:EncryptedID>`
 |====================
 
