--- a/docs/A WebSSO Implementation/030_Name_Identifiers.adoc
+++ b/docs/A WebSSO Implementation/030_Name_Identifiers.adoc
@@ -5,6 +5,6 @@ In conjunction with their support of the SAML V2.0 profiles referenced by subseq
 [width="100%", cols="4,2,2,3,27", options="header"]
 |====================
 | RequID  | IDP  | SP   | Source| Format Identifier                                                                  
-| INID-001 | MUST | MUST | eGov/223| urn:oasis:names:tc:SAML:2.0:nameid-format:persistent (see [SAML2Core] sect. 8.3)   
-| INID-002 | MUST | MUST | eGov/224| urn:oasis:names:tc:SAML:2.0:nameid-format:transient (see [SAML2Core] sect. 8.3)    
+| INID-001 | MUST | MUST | eGov/223| urn:oasis:names:tc:SAML:2.0:nameid-format:persistent (see <<SAML2Core>> sect. 8.3)   
+| INID-002 | MUST | MUST | eGov/224| urn:oasis:names:tc:SAML:2.0:nameid-format:transient (see <<SAML2Core>> sect. 8.3)    
 |====================
