--- a/docs/A WebSSO Implementation/065_Single_Logout_Requests.adoc
+++ b/docs/A WebSSO Implementation/065_Single_Logout_Requests.adoc
@@ -1,5 +1,5 @@
 === Single Logout
-This section defines an implementation profile of the SAML V2.0 Single Logout Profile [SAML2Prof].
+This section defines an implementation profile of the SAML V2.0 Single Logout Profile <<SAML2Prof>>.
 For clarification, the technical requirements for each message type below reflect the intent to normatively require initiation of logout by a Service Provider using either the front- or back-channel, and initiation/propagation of logout by an Identity Provider using the back-channel.
 
 ==== Single Logout - Functional Requirements
